# qmtl2

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  architecture.archived.md  architecture.md  backlog.md  coverage.xml  dag_manager.Dockerfile  docker-compose.dev.yml  gateway.Dockerfile  nextgen.todo.md  nodeID.md  orchestrator.Dockerfile  pyproject.toml  qmtl_architecture_nextgen.md  registry.Dockerfile  requirements.txt  test_concurrent_tmp.py  todo.archived.md  todo.md
docs/: analyzer_guide.md  (+13 more)
src/qmtl/dag_manager/: Dockerfile  Makefile  README.md  __init__.py  api.py  docker-compose.yml  event_client.py  pyproject.toml
src/qmtl/dag_manager/core/: graph_builder.py  queue_repository.py  queue_worker.py  ready_node_selector.py
src/qmtl/dag_manager/execution/: execution_interface.py  status_service.py
src/qmtl/dag_manager/registry/: __init__.py  api.py  api_callback.py  registry_client.py
src/qmtl/dag_manager/registry/services/: event.py  metadata_service.py
src/qmtl/dag_manager/registry/services/gc/: service.py
src/qmtl/dag_manager/registry/services/node/: callback.py  management.py  memory_impl.py  validation.py
src/qmtl/dag_manager/registry/services/strategy/: __init__.py  management.py  snapshot.py
src/qmtl/dag_manager/services/: dependency_service.py  metadata_service.py  node_service.py  stream_service.py
src/qmtl/dag_manager/strategy/: strategy_interface.py
src/qmtl/dag_manager/tests/: conftest.py
src/qmtl/dag_manager/tests/e2e/: README.md
src/qmtl/dag_manager/tests/integration/: test_callback.py  test_gateway_integration.py  test_performance.py  test_registry.py  test_registry_multi4.py
src/qmtl/dag_manager/tests/unit/: __init__.py  test_neo4j_schema.py  test_protobuf_roundtrip.py
src/qmtl/dag_manager/tests/unit/common/config/: test_settings.py
src/qmtl/dag_manager/tests/unit/common/db/: test_connection_pool.py  test_neo4j_client.py  test_transaction.py
src/qmtl/dag_manager/tests/unit/common/http/: test_client.py
src/qmtl/dag_manager/tests/unit/common/redis/: test_redis_client.py  test_redis_history.py
src/qmtl/dag_manager/tests/unit/common/utils/: test_hash_utils.py  test_serialization.py  test_time_utils.py  test_validation.py
src/qmtl/dag_manager/tests/unit/models/: test_datanode.py  test_status_multi6.py
src/qmtl/gateway/: Dockerfile  Makefile  README.md  __main__.py  api.py  docker-compose.yml  gateway.py  pyproject.toml
src/qmtl/gateway/middlewares/: __init__.py  acl.py  auth.py  error.py  logging.py
src/qmtl/gateway/services/: __init__.py  policy.py  work_queue_service.py
src/qmtl/sdk/: Dockerfile  Makefile  README.md  __init__.py  analyzer.py  container.py  docker-compose.yml  execution.py  k8s.py  models.py  node.py  pipeline.py  pyproject.toml  topic.py  visualization.py
src/qmtl/sdk/execution/: __init__.py  base.py  local.py  parallel_engine.py  state_manager.py  stream_processor.py
src/qmtl/sdk/tests/: conftest.py
src/qmtl/sdk/tests/integration/: test_gateway_integration.py
src/qmtl/sdk/tests/unit/: test_analyzer.py  test_parallel_engine.py  test_state_manager.py  test_stream_processor.py
src/qmtl/sdk/tests/unit/sdk/: __init__.py  test_container.py  test_local_execution.py  test_redis_state_manager.py
(+188 files in other folders)
