[project]
name = "qmtl-dag-manager"
version = "0.1.0"
description = "QMTL DAG Manager Service"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.12.0",
    "loguru>=0.7.0",
    "structlog>=23.1.0",
    "python-dotenv>=1.0.0",
    "protobuf>=4.25.0",
    # 필요시 추가
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "testcontainers>=3.7.0",
    "freezegun>=1.4.0",
]

[tool.uv]
# 서비스별 의존성은 추후 보완
